--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,11 @@ if (PNG_FOUND)
   include_directories (${PNG_INCLUDE_DIR})
   target_link_libraries(quarrel ${PNG_LIBRARIES})
 endif (PNG_FOUND)
+
+find_package(Threads REQUIRED)
+if(THREADS_HAVE_PTHREAD_ARG)
+  target_compile_options(PUBLIC quarrel "-pthread")
+endif()
+if(CMAKE_THREAD_LIBS_INIT)
+  target_link_libraries(quarrel "${CMAKE_THREAD_LIBS_INIT}")
+endif()
